App view on its way

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+    <div id="form-container"></div>
     <form id="1dbs-form" >
         <!-- <div id="title-container" class="container"></div> -->
         <script type="text/template" id="title-tpl">
