view refactor done

--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
         <script src="script/views/Dimensions.js"></script>
         <script src="script/views/Conditions.js"></script>
         <script src="script/views/Save.js"></script>
-        <script src="script/views/App.js"></script>
+        <script src="script/views/Form.js"></script>
         <script src="script/app/initiate.js"></script>
     <!-- end local scripts -->
 </body>
